# dcodex_lectionary

./: .coveragerc  README.md  admin.py  models.py  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  urls.py  views.py
.github/workflows/: coverage.yml
dcodex_lectionary/: __init__.py  admin.py  apps.py  models.py  plotting.py  similarity.py  urls.py  views.py
dcodex_lectionary/data/: LectionarySystem-Apostolos-e.csv  LectionarySystem-Apostolos-esk.csv  LectionarySystem-Apostolos-k.csv  LectionarySystem-Apostolos-sk.csv  LectionarySystem-Epistles-e.csv  LectionarySystem-Epistles-esk.csv
dcodex_lectionary/fixtures/: lectionarydays.json
dcodex_lectionary/migrations/: 0005_auto_20190921_1617.py  0008_auto_20200106_1548.py  0011_auto_20200225_1756.py  0013_auto_20200302_1226.py  0014_auto_20200314_1246.py  0015_lectioninsystem_incipit.py  0016_auto_20200314_1804.py  0017_auto_20200314_1806.py  0018_auto_20200316_1848.py  0026_auto_20200809_1631.py  0029_auto_20201116_2119.py  0030_auto_20201119_2131.py  0031_auto_20201119_2140.py  0032_auto_20201119_2154.py  0033_auto_20201119_2239.py  0034_auto_20201122_2300.py  0035_auto_20210811_1101.py
dcodex_lectionary/scripts/: convert_lectionary_days.py
migrations/: 0001_initial.py  0002_remove_lectionaryverse_unique_string.py  0003_lectionaryverse_unique_string.py  0004_auto_20190921_1617.py  0006_auto_20190927_1634.py  0007_lectioninsystem_cumulative_mass_lections.py  0009_fixeddate_date.py  0010_auto_20200221_1733.py  0012_auto_20200225_1756.py  0019_auto_20200316_1849.py  0020_remove_lection_verses.py  0021_lection_verses.py  0022_lectionaryverse_mass.py  0023_auto_20200526_1559.py  0024_auto_20200526_1623.py  0025_affiliationlections.py  0027_affiliationlectionarysystem.py  0028_auto_20200813_2236.py
templates/dcodex_lectionary/: affiliation_lections.html  affiliation_lections_list.html  lection_verses.html  (+2 more)
templatetags/: dcodex_lectionary_tags.py
tests/: settings.py  test_check.py  test_models.py  test_settings.py
(+19 files in other folders)
