[tool.poetry]
name = "dcodex_lectionary"
version = "0.3.1"
description = "Extension for D-Codex to use lectionaries"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Django = ">=3.2.6"
pandas = ">=1.3.1"
dcodex-bible = {git = "https://github.com/rbturnbull/dcodex_bible.git"}
django-imagedeck = ">=0.4.0"

[tool.poetry.group.dev.dependencies]
coverage = ">=5.5"

[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
